
This document provides a high-level view of the changes to the {project-name} by release.
For a detailed view of what has changed, refer to the {uri-repo}/commits/master[commit history] on GitHub.

== Unreleased

* only support Ruby >= 2.2.0 and Jekyll >= 3.0.0
* update tests to only run against supported versions
* don't crash if document body is empty (#179)
* honor layout defined in frontmatter defaults (#187)
* allow page layout to be soft set in site config (#193)
* set asciidoc property to true on all AsciiDoc pages (#189)
* set asciidoc property to true on any (AsciiDoc) page enriched by this plugin (i.e., page.asciidoc) (#189)
* don't call nil_or_empty? outside of an Asciidoctor context (#142)
* don't delete category and tag; sync w/ first entry in array of matching property (#160)
* don't coerce a falsy value of page-layout defined in _config.yml to nil
* document how to enable STEM support (#163)
* document that a liquid tag that includes HTML must be enclosed in a passthrough block (#180)
* document that page attributes must be defined in the document header (#172)
* document both the plugins and gems config keys and when to use one vs the other (#159)
* document how to disable publishing for a page
* document how to make a draft post
* recommend installing gems into project and using a .ruby-version file
* pass standalone option through data instead of prepending to content
* set up code coverage reports

== 2.1.1 (2018-11-08) - @mojavelinux

* honor layout defined in frontmatter defaults (#187)
* don't call nil_or_empty? outside of an Asciidoctor context (#142)
* handle case when document body is empty (#179)

== 2.1.0 (2017-05-21) - @mojavelinux

* Add `tocify_asciidoc` Liquid filter for generating a table of contents from the parsed AsciiDoc document (Jekyll 3+ only) (#37)
* Remove trailing `@` when resolving attribute reference in value of attribute defined in config
* Set minimum version of Ruby to 1.9.3 in the gemspec