@@ -1,0 +1,2 @@
+= Header Only
+:page-layout: page
