@@ -10,6 +10,7 @@ For a detailed view of what has changed, refer to the {uri-repo}/commits/master[
 * only support Ruby >= 2.2.0 and Jekyll >= 3.0.0
 * update tests to only run against supported versions
 * don't crash if document body is empty (#179)
+* process AsciiDoc header if page has only an AsciiDoc header but no body
 * honor layout defined in frontmatter defaults (#187)
 * allow page layout to be soft set in site config (#193)
 * set asciidoc property to true on all AsciiDoc pages (#189)
